add snooty build

--- a/.github/workflows/build-site.yml
+++ b/.github/workflows/build-site.yml
@@ -10,3 +10,7 @@ jobs:
           node-version: "18.x"
       - name: Install parser
         run: curl -L -o snooty-parser.zip https://github.com/mongodb/snooty-parser/releases/download/v0.16.6/snooty-v0.16.6-linux_x86_64.zip && unzip -d /opt/ snooty-parser.zip
+      - name: Add env
+        run: echo "/opt/snooty" >> $GITHUB_PATH
+      - name: run parser
+        run: snooty build . --output=./bundle.zip
