--- a/.github/workflows/build-site.yml
+++ b/.github/workflows/build-site.yml
@@ -12,5 +12,12 @@ jobs:
         run: curl -L -o snooty-parser.zip https://github.com/mongodb/snooty-parser/releases/download/v0.16.6/snooty-v0.16.6-linux_x86_64.zip && unzip -d /opt/ snooty-parser.zip
       - name: Add env
         run: echo "/opt/snooty" >> $GITHUB_PATH
-      - name: run parser
+      - name: Run parser
         run: snooty build . --output=./bundle.zip
+      - name: Build HTML
+        run: |
+          git clone -b v0.16.13 --depth 1 https://github.com/mongodb/snooty.git 
+          echo GATSBY_MANIFEST_PATH=$(pwd) >> ./snooty/.env.production
+          cd snooty                                                                                   
+          npm ci --legacy-peer-deps
+          npm run build
