--- a/.github/workflows/build-site.yml
+++ b/.github/workflows/build-site.yml
@@ -19,6 +19,7 @@ jobs:
           git clone -b v0.16.13 --depth 1 https://github.com/mongodb/snooty.git 
           echo GATSBY_MANIFEST_PATH=$(pwd) >> ./snooty/.env.production
           cd snooty                
-          echo //artifactory.corp.mongodb.com/artifactory/api/npm/:_auth=${{ secrets.NPM_AUTH}} >> .npmrc                                                                
+          echo "//artifactory.corp.mongodb.com/artifactory/api/npm/:_authToken=${{ secrets.NPM_AUTH}}" >> ~/.npmrc                                                                
+          echo "//artifactory.corp.mongodb.com/artifactory/api/npm/:auth=${{ secrets.NPM_AUTH}}" >> ~/.npmrc                                                                
           npm ci --legacy-peer-deps
           npm run build
