--- a/.github/workflows/build-site.yml
+++ b/.github/workflows/build-site.yml
@@ -14,12 +14,14 @@ jobs:
         run: echo "/opt/snooty" >> $GITHUB_PATH
       - name: Run parser
         run: snooty build . --output=./bundle.zip
+        env:
+          NPM_AUTH: ${{ secrets.NPM_AUTH}}
       - name: Build HTML
         run: |
           git clone -b v0.16.13 --depth 1 https://github.com/mongodb/snooty.git 
           echo GATSBY_MANIFEST_PATH=$(pwd) >> ./snooty/.env.production
+          echo "//artifactory.corp.mongodb.com/artifactory/api/npm/:_authToken=${{ secrets.NPM_AUTH}}" >> .npmrc                                                                
+          echo "//artifactory.corp.mongodb.com/artifactory/api/npm/:_auth=${{ secrets.NPM_AUTH}}" >> .npmrc       
           cd snooty                
-          echo "//artifactory.corp.mongodb.com/artifactory/api/npm/:_authToken=${{ secrets.NPM_AUTH}}" >> ~/.npmrc                                                                
-          echo "//artifactory.corp.mongodb.com/artifactory/api/npm/:auth=${{ secrets.NPM_AUTH}}" >> ~/.npmrc                                                                
           npm ci --legacy-peer-deps
           npm run build
