--- a/.github/workflows/build-site.yml
+++ b/.github/workflows/build-site.yml
@@ -23,4 +23,8 @@ jobs:
           echo GATSBY_MANIFEST_PATH=$(pwd)/bundle.zip >> ./snooty/.env.production
           cd snooty                
           npm ci --legacy-peer-deps
+          git clone --depth 1 https://github.com/mongodb/docs-tools.git
+          mkdir -p ./static/images
+          mv ./docs-tools/themes/mongodb/static ./static/docs-tools
+          mv ./docs-tools/themes/guides/static/images/bg-accent.svg ./static/docs-tools/images/bg-accent.svg
           npm run build
