--- a/.github/workflows/build-site.yml
+++ b/.github/workflows/build-site.yml
@@ -9,7 +9,9 @@ jobs:
         with:
           node-version: "18.x"
       - name: Install parser
-        run: curl -L -o snooty-parser.zip https://github.com/mongodb/snooty-parser/releases/download/v0.16.6/snooty-v0.16.6-linux_x86_64.zip && unzip -d /opt/ snooty-parser.zip
+        run: |
+          curl -L -o snooty-parser.zip https://github.com/mongodb/snooty-parser/releases/download/v0.16.6/snooty-v0.16.6-linux_x86_64.zip
+          unzip -d /opt/ snooty-parser.zip
       - name: Add env
         run: echo "/opt/snooty" >> $GITHUB_PATH
       - name: Run parser
@@ -28,3 +30,17 @@ jobs:
           mv ./docs-tools/themes/mongodb/static ./static/docs-tools
           mv ./docs-tools/themes/guides/static/images/bg-accent.svg ./static/docs-tools/images/bg-accent.svg
           npm run build
+      - name: Deploy to Netlify
+        uses: nwtgck/actions-netlify@v3.0
+        with:
+          publish-dir: "./snooty/public"
+          production-branch: master
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          deploy-message: "Deploy from GitHub Actions"
+          enable-pull-request-comment: false
+          enable-commit-comment: true
+          overwrites-pull-request-comment: true
+        env:
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+        timeout-minutes: 1
