--- a/.github/workflows/build-site.yml
+++ b/.github/workflows/build-site.yml
@@ -44,3 +44,9 @@ jobs:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
         timeout-minutes: 1
+      - name: Cache Snooty parser
+        id: cache-snooty-parser
+        uses: actions/cache@v4
+        with:
+          path: .snooty-*
+          key: ${{ runner.os }}-parser-cache-${{hashFiles('.snooty-**')}}
