--- a/.github/workflows/build-site.yml
+++ b/.github/workflows/build-site.yml
@@ -8,6 +8,15 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: "18.x"
+      - name: Restore cache
+        id: cache
+        uses: actions/cache/restore@v4
+        with:
+          path: |
+            .snooty-*
+            .cache
+            public
+          key: ${{runner.os}}-site-cache
       - name: Install parser
         run: |
           curl -L -o snooty-parser.zip https://github.com/mongodb/snooty-parser/releases/download/v0.16.6/snooty-v0.16.6-linux_x86_64.zip
@@ -46,7 +55,10 @@ jobs:
         timeout-minutes: 1
       - name: Cache Snooty parser
         id: cache-snooty-parser
-        uses: actions/cache@v4
+        uses: actions/cache/save@v4
         with:
-          path: .snooty-*
-          key: ${{ runner.os }}-parser-cache-${{hashFiles('.snooty-**')}}
+          path: |
+            .snooty-*
+            .cache
+            public
+          key: ${{ steps.cache.outputs.cache-primary-key }}
