--- a/.github/workflows/build-site.yml
+++ b/.github/workflows/build-site.yml
@@ -53,6 +53,8 @@ jobs:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
         timeout-minutes: 1
+      - name: Create parser cache
+        run: snooty build-cache .
       - name: Cache Snooty parser
         id: cache-snooty-parser
         uses: actions/cache/save@v4
