--- a/.github/workflows/build-site.yml
+++ b/.github/workflows/build-site.yml
@@ -54,7 +54,7 @@ jobs:
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
         timeout-minutes: 1
       - name: Create parser cache
-        run: snooty build-cache .
+        run: snooty create-cache .
       - name: Cache Snooty parser
         id: cache-snooty-parser
         uses: actions/cache/save@v4
