--- a/.github/workflows/build-site.yml
+++ b/.github/workflows/build-site.yml
@@ -33,11 +33,12 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: |
           git clone -b v0.16.14 --depth 1 https://github.com/mongodb/snooty.git 
-          echo GATSBY_MANIFEST_PATH=$(pwd)/bundle.zip >> ./snooty/.env.production
+          cd snooty                
+          npm ci --legacy-peer-deps
       - name: Build HTML
         run: |
           cd snooty                
-          npm ci --legacy-peer-deps
+          echo GATSBY_MANIFEST_PATH=$(pwd)/bundle.zip >> ./snooty/.env.production
           git clone --depth 1 https://github.com/mongodb/docs-tools.git
           mkdir -p ./static/images
           mv ./docs-tools/themes/mongodb/static ./static/docs-tools
