Use correct cache key

--- a/.github/workflows/build-site.yml
+++ b/.github/workflows/build-site.yml
@@ -14,8 +14,7 @@ jobs:
         with:
           path: |
             *.cache.gz
-            .cache/
-            public/
+            snooty/
           key: ${{runner.os}}-site-cache
       - name: Install parser
         run: |
