--- a/.github/workflows/build-site.yml
+++ b/.github/workflows/build-site.yml
@@ -34,7 +34,7 @@ jobs:
           git clone -b v0.16.14 --depth 1 https://github.com/mongodb/snooty.git 
           echo GATSBY_MANIFEST_PATH=$(pwd)/bundle.zip >> ./snooty/.env.production
           cd snooty                
-          npm ci --legacy-peer-deps
+          npm i --legacy-peer-deps
           git clone --depth 1 https://github.com/mongodb/docs-tools.git
           mkdir -p ./static/images
           mv ./docs-tools/themes/mongodb/static ./static/docs-tools
