--- a/.github/workflows/build-site.yml
+++ b/.github/workflows/build-site.yml
@@ -53,7 +53,7 @@ jobs:
           enable-pull-request-comment: false
           enable-commit-comment: true
           overwrites-pull-request-comment: true
-          alias: ${{ github.head_ref }}
+          alias: staging
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
