--- a/.github/workflows/build-site.yml
+++ b/.github/workflows/build-site.yml
@@ -31,7 +31,7 @@ jobs:
           NPM_EMAIL: ${{secrets.NPM_EMAIL}}
         if: steps.cache.outputs.cache-hit != 'true'
         run: |
-          git clone -b v0.16.14 --depth 1 https://github.com/mongodb/snooty.git 
+          git clone -b netlify-poc --depth 1 https://github.com/mongodb/snooty.git 
           echo GATSBY_MANIFEST_PATH=$(pwd)/bundle.zip >> ./snooty/.env.production
           cd snooty                
           npm ci --legacy-peer-deps
