--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 # Redirect with a 301
 [[redirects]]
-from = "/fundamentals/versioned-api"
+from = "/*"
 to = "/fundamentals/stable-api"
 status = 301
